<resources>
    <string name="app_name">Battle Beasts</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_team">Create Team</string>
    <string name="view_monsters">View Monsters</string>
    <string name="battle">Battle</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>