<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleBeastsMenuPage">

    <Button
        android:id="@+id/buttonCreateTeamInMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="92dp" />

    <Button
        android:id="@+id/buttonBattleInMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="540dp" />

    <Button
        android:id="@+id/buttonViewMonstersInMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_monsters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonBattleInMenu"
        app:layout_constraintStart_toEndOf="@+id/buttonCreateTeamInMenu"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>